[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player2.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player2.gd" type="Script" id=3]
[ext_resource path="res://ball.gd" type="Script" id=4]
[ext_resource path="res://ball.tscn" type="PackedScene" id=5]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( -289.852, 11.3701 )
b = Vector2( 108.38, 11.787 )

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( -205.504, 9.48077 )
b = Vector2( 194.509, 10.7887 )

[node name="Main" type="Node2D"]

[node name="Player1" parent="." instance=ExtResource( 1 )]
position = Vector2( 608.132, 217.816 )

[node name="Player2" parent="." instance=ExtResource( 2 )]
position = Vector2( 226.951, 211.701 )
script = ExtResource( 3 )

[node name="ball" parent="." instance=ExtResource( 5 )]
position = Vector2( 424, 207 )
script = ExtResource( 4 )

[node name="upper_limit" type="StaticBody2D" parent="."]
position = Vector2( 424.671, 208.363 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="upper_limit"]
position = Vector2( 82.8536, -158.58 )
shape = SubResource( 1 )

[node name="lower_limit" type="StaticBody2D" parent="."]
position = Vector2( 425.849, 339.432 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="lower_limit"]
position = Vector2( 0.89093, -0.8909 )
shape = SubResource( 2 )

[node name="label1" type="Label" parent="."]
margin_left = 292.215
margin_top = 81.9627
margin_right = 332.215
margin_bottom = 95.9627
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label2" type="Label" parent="."]
margin_left = 502.467
margin_top = 96.2171
margin_right = 542.467
margin_bottom = 110.217
__meta__ = {
"_edit_use_anchors_": false
}
